WebDriver: evaluating javascript shouldn't fail if a dialog is shown https://bugs.webkit.org/show_bug.cgi?id=196847 <rdar://problem/49609396>

Reviewed by Brian Burg.

* UIProcess/Automation/WebAutomationSession.cpp:
(WebKit::WebAutomationSession::willShowJavaScriptDialog):


Canonical link: https://commits.webkit.org/211139@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244230 268f45cc-cd09-0410-ab3c-d52691b4dbfc